# MY-FIRST-RAG_v1

./: .gitignore  app.py  app2.py  main.py  pyproject.toml  requirements.txt  test.ipynb
